Added mock_prompt fixture to mock prompt_toolkit.prompt() function.

*****

Reshufled merge function in bib_manager.py (no real edits).

*****

Adapted test_bib_manager.py tests to use entries fixture when needed.
Implemented tests for bm.add_entries() function.

*****

Implemented tests for bm.merge() function.
Moved 'Merged ...' print statement to the very end of bm.merge().


*****  Sat Jan 19 14:25:35 CET 2019  *****

Updated docstrings and docs for search (in database).

*****

Implemented tests for bm.search() function.
This completes test_bib_manager.py (for now, need to think about
bm.edit()).

*****

Fixing travis file to run both 3.6 and 3.7

*****

New attempt at fixing travis file.

*****

Some cosmetic edits in config_manager.py.

*****

Added test_config_manager.py file testing test.

*****

Fixed bug in lm.build_bib(), need to prepend path to bibfile when
taken form bibiliography, and ran remotely.

*****

Allowed lm.build_bib() to receive texfile without extension
(but still check that it has a .tex extension).
Added extension checks to lm.compile_latex() and lm.compile_pdflatex().

*****

Implemented tests for lm.build_bib() and clear_latex() functions.
Only the compiling functions remain to be tested.  But those require
either heavy monkeypatching or lear how to integrate the compilation
commands into travis CI.


*****  Sun Jan 20 18:36:49 CET 2019  *****

Modified mock_init fixture to monkey patch functions' defaults.

******

Added mock_init_sample fixture to initialize database with entries
from sample.bib file.

*****

Moved main_description string in __main__.py to outer scope so the
user can access to it.

*****

Updated test_bib_manager.py to use mock_init_sample fixture.

*****

Implemented test_cli.py with tests for command-line functions.

*****

Removed unit subfolder in tests.


*****  Di 22. Jan 18:07:43 CET 2019  *****


Added ads_entries() fixture to test ads_manager.py functions.

*****
